static/css/app.css
/******************************************************************************

Hubnemevedvou.cz

Application styles

1. Colors
2. Main
3. Header
4. Sidebar
5. Content
6. Footer

Media querry

*******************************************************************************/


/******************************************************************************
1. Colors
*******************************************************************************/

.cyan { color:#00aedf; }
.blue { color:#428bca; }

.text-muted {
color: #68C2DF;
}

html {
background-color: #e3f3ff;
}

/******************************************************************************
2. Main
*******************************************************************************/

.btn-blue{
    background: #25aae1;
    color: #FFF;}
    .btn-blue a{
    color: #FFF;
    }


.btn-green{
background-color: #7bc021;
-moz-box-shadow: inset 0px 2px 0px #d7ef3a;
-webkit-box-shadow: inset 0px 2px 0px #d7ef3a;
box-shadow: inset 0px 2px 0px #d7ef3a;
color: #FFF;
}

.right{ float:right; }
.left{ float:left; }

.bigger{
   font-size: 36px;
   line-height: 30px;
}

.bold{ font-weight:bold; }
.padding-bottom{ padding-bottom:20px; }
.padding-top{ padding-top:20px; }
.padding-both{ margin:0 20px}

/******************************************************************************
3. Header
*******************************************************************************/

#header{
    background-color:#00aedf;
    color:white;
    height:62px;
    position: fixed;
    z-index: 9999;
    width: 100%;}
    #header h2{ color:white; }
    #header ul{ padding-top: 6px; }
    #header button{
        border: 1px solid #FFF;
        margin-top: 20px; }
    #header a{ color:white; display:block; }
    #header a:hover{ background-color:#428bca; }
    #header ul li a[href*="/b/login"]{ 
        background-image: -webkit-gradient(linear,left 0,left 100%,from(#428bca),to(#2d6ca2));
        background-image: -webkit-linear-gradient(top,#428bca 0,#2d6ca2 100%);
        background-image: -moz-linear-gradient(top,#428bca 0,#2d6ca2 100%);
        background-image: linear-gradient(to bottom,#428bca 0,#2d6ca2 100%);
        background-repeat: repeat-x;
        border-color: #2b669a;
        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff428bca',endColorstr='#ff2d6ca2',GradientType=0);
        height: 50px;
        text-align: center;
        white-space: nowrap;
        vertical-align: middle;
        cursor: pointer;
        border: 1px solid transparent;
        border-radius: 4px;
        }

.navbar-brand{ padding:0px important; }
    @media only screen and (max-width: 768px) {
        .hero{ 
            float: left;
            background: #428bca;
            width: 100%;
            margin-bottom: 20px;
            text-align: center;}
        .nav-pills>li{float:none !important;}
    }


/******************************************************************************
4. Sidebar menu
*******************************************************************************/

#sidebar{ 
    background-color:#FFF;
    margin:0 0 15px 0;}
    #sidebar li{ padding: 0 5px; }

#register-new-sidebar{
    background:#FFF;
    padding: 20px;
    text-align: center;
    margin-bottom:15px;}
    #register-new-sidebar label{ display: none; }

#sidebar li:first-child{
margin-top:10px;

}

#sidebar li:last-child{
margin-bottom:10px;

}

.friend-suggestion h3{
    padding:0px;
    margin:0px;
    color: black;
    max-width:100%;
    overflow:hidden;
}

/******************************************************************************
5. Content
*******************************************************************************/

#content{
    background-image:url("../images/bg.png");
    background-repeat:repeat-x;
    padding-bottom:50px;
    background-position:center;
    background-position: top;
    padding-top:80px;
}

/******************************************************************************
5. Homepage
*******************************************************************************/

.banner{
    width: 602px;
    background-color: #FFF;
    margin: 0 auto;
    background-image: none;
    border-radius: 0px;
    -webkit-border-radius: 0px;
    box-shadow: 0px 0px 10px #66b7fb;
    font-weight: bold;
    font-size: 16px;
    min-height: 132px;
    padding: 27px;
    }

.col-sm-3 nav nav-pills nav-stacked{ background-color:gray; }

.lide{
background-image: url("../images/hubneme-lide.png");
padding-bottom: 80px;
background-repeat: no-repeat;
background-position: top left;
position: absolute;
top: 0px;
height: 400px;
width: 100%;

}

.assist-text{
    min-height: 200px;
    background-image:url("../images/sipky.png");
    background-repeat:no-repeat; }
    .assist-text p{
        font-size: 18px;
        font-weight: lighter;
        padding-top: 30px;
        max-width: 600px;
        margin: 0 auto; }
    .assist-text p strong{
        font-size: 18px;
        font-weight: normal;
        padding-top: 30px;
        max-width: 600px;
        margin: 0 auto;
    }
 .assist-text p b{
        font-size: 18px;
        font-weight: normal;
        padding-top: 30px;
        max-width: 600px;
        margin: 0 auto;
    }

.navbar-toggle .icon-bar{ background-color: white; }

/******************************************************************************
6. Registration process
*******************************************************************************/

#register-form{}
    #register-form li{ 
        width: 33%;
        float: left;
        text-align: center;
        padding: 5px 5%;
        list-style: none;
        display: inline;}

.form-horizontal{
    max-width: 850px;
    margin: 0 auto; }
.has-switch{
    z-index:999;
    min-width: 139px !important;
}
.has-switch.switch-animate.switch-mini.switch-off{
float: right;
margin-right: 15px;
}
/* ... */

